gccida/c2/optimize_sibling_and_tail_recursive_calls
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1074:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1074:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1076:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1076:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:4: error: expected ';' after expression
rtx v41; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:5: error: use of undeclared identifier 'v41'
rtx v41; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1078:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1078:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1081:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1081:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:4: error: expected ';' after expression
rtx v48; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:5: error: use of undeclared identifier 'v48'
rtx v48; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1085:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1085:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1090:4: error: expected ';' after expression
rtx v54; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1090:5: error: use of undeclared identifier 'v54'
rtx v54; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1092:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/optimize_sibling_and_tail_recursive_calls/src/obj/sibcall.o] Error 1
